cluster/manifests/cortex-api/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex-api
  labels:
    name: cortex-api
    pod-security.kubernetes.io/enforce: restricted
