cluster/manifests/cortex-api/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cortex-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
  mtls:
    mode: STRICT
