cluster/manifests/cortex-api/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cortex-api
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - cortex-api.minikube.127.0.0.1.nip.io
        - cortex-api.kaidotio.dev
        - cortex-api-external.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
