cluster/manifests/cortex-api/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-prometheus-metrics-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 65532
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              istio: ingressgateway
        - namespaceSelector:
            matchLabels:
              name: runner
        - namespaceSelector:
            matchLabels:
              name: jupyterhub
      ports:
        - protocol: TCP
          port: 8080
        # HBONE
        - protocol: TCP
          port: 15008
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-redis-haproxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
      app.kubernetes.io/component: redis-haproxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-api
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 6380
        - protocol: TCP
          port: 6381
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-redis-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              app: istiod
      ports:
        - protocol: TCP
          port: 15012
    - to:
        - namespaceSelector:
            matchLabels:
              name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-agent
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 4317
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-tls-intercept-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
      app.kubernetes.io/component: tls-intercept-proxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-api
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 3128
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-api
              app.kubernetes.io/component: varnish
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-ext-proc-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
      app.kubernetes.io/component: ext-proc-proxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-api
              app.kubernetes.io/component: tls-intercept-proxy
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-varnish
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-api
      app.kubernetes.io/component: varnish
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-api
              app.kubernetes.io/component: ext-proc-proxy
      ports:
        - protocol: TCP
          port: 6081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-api-chrome-devtools-protocol-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: chrome-devtools-protocol-server
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              app: cluster-local-gateway
      ports:
        - protocol: TCP
          port: 8012
    - from:
        - namespaceSelector:
            matchLabels:
              name: knative-serving
          podSelector:
            matchLabels:
              app.kubernetes.io/name: knative-serving
              app.kubernetes.io/component: activator
      ports:
        - protocol: TCP
          port: 8012
    - from:
        - namespaceSelector:
            matchLabels:
              name: knative-serving
          podSelector:
            matchLabels:
              app.kubernetes.io/name: knative-serving
              app.kubernetes.io/component: autoscaler
      ports:
        - protocol: TCP
          port: 9090
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-api
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-api
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 8012
